cpp/source/compiling_error.txt
/home/syonfox/github/PixelPlanetSandbox/cpp/source/Universe.cpp:1:2: warning: #import is a deprecated GCC extension [-Wdeprecated]
 #import "Universe.hpp"
  ^~~~~~
In file included from /home/syonfox/github/PixelPlanetSandbox/cpp/source/Universe.cpp:1:0:
/home/syonfox/github/PixelPlanetSandbox/cpp/source/Universe.hpp:3:2: warning: #import is a deprecated GCC extension [-Wdeprecated]
 #import "Planet.hpp"
  ^~~~~~
In file included from /home/syonfox/github/PixelPlanetSandbox/cpp/source/Universe.cpp:1:0:
/home/syonfox/github/PixelPlanetSandbox/cpp/source/Universe.hpp:4:2: warning: #import is a deprecated GCC extension [-Wdeprecated]
 #import <SFML/Graphics.hpp>
  ^~~~~~
/home/syonfox/github/PixelPlanetSandbox/cpp/source/Universe.hpp:5:2: warning: #import is a deprecated GCC extension [-Wdeprecated]
 #import <vector>
  ^~~~~~
/home/syonfox/github/PixelPlanetSandbox/cpp/source/Universe.cpp:2:2: warning: #import is a deprecated GCC extension [-Wdeprecated]
 #import "Planet.hpp"
  ^~~~~~
/home/syonfox/github/PixelPlanetSandbox/cpp/source/Universe.cpp:3:2: warning: #import is a deprecated GCC extension [-Wdeprecated]
 #import <SFML/Graphics.hpp>
  ^~~~~~
/home/syonfox/github/PixelPlanetSandbox/cpp/source/Universe.cpp: In member function ‘void pps::Universe::Update(sf::Time)’:
/home/syonfox/github/PixelPlanetSandbox/cpp/source/Universe.cpp:91:5: error: ‘updated’ was not declared in this scope
     updated shape to thelist of shapes to draw.vps.push_back(
     ^~~~~~~
